Удалил из разметки index.html класс hero__title--main

--- a/source/index.html
+++ b/source/index.html
@@ -67,7 +67,7 @@
       <p class="navigation__delivery">Бесплатная доставка по России</p>
     </nav>
     <section class="hero hero--main-page">
-      <h1 class="hero__title hero__title--main">Милые штуки ручной<br> работы для дома</h1>
+      <h1 class="hero__title">Милые штуки ручной<br> работы для дома</h1>
       <ul class="hero__list">
         <li class="hero__item">
           <a class="hero__link hero__link--interior" href="#">
