Добавил обертку в footer в странице catalog.html

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -193,6 +193,7 @@
   </main>
 
   <footer class="footer">
+    <div class="footer__wrapper">
       <a class="footer__logo" href="index.html">
         <svg class="footer__logo-image" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="102" height="34" viewBox="0 0 101.615 34.056" enable-background="new 0 0 101.615 34.056" xml:space="preserve">
           <g>
@@ -251,7 +252,8 @@
           </svg>
         </a>
       </div>
-    </footer>
+    </div>
+  </footer>
   <!-- Modals -->
   <div class="overlay"></div>
   <section class="modal modal-basket">
