--- a/source/form.html
+++ b/source/form.html
@@ -10,7 +10,7 @@
 
 <body class="page">
 
-  <header class="header header--inner-page">
+  <header class="header">
     <nav class="navigation">
       <div class="navigation__logo">
         <a class="navigation__logo-link" href="index.html">
