--- a/source/form.html
+++ b/source/form.html
@@ -254,6 +254,8 @@
     </div>
   </footer>
 
+  <script src="js/script.js"></script>
+  <script src="js/picturefill.min.js"></script>
 </body>
 
 </html>
