--- a/source/index.html
+++ b/source/index.html
@@ -318,6 +318,8 @@
     <a class="button modal-basket__add" href="#">Добавить</a>
   </section>
 
+  <script src="js/script.js"></script>
+  <script src="js/picturefill.min.js"></script>
 </body>
 
 </html>
