--- a/source/index.html
+++ b/source/index.html
@@ -17,7 +17,7 @@
           <picture class="navigation__logo-picture">
             <source srcset="img/logo-desktop.svg" media="(min-width: 1150px)">
             <source srcset="img/logo-tablet.svg" media="(min-width: 768px)">
-            <img class="navigation__logo-image" src="img/logo-mobile.svg" alt="Мишка логотип">
+            <img class="navigation__logo-image" src="img/logo-mobile.svg" alt="Интернет-магазин Мишка" width="86" height="35" >
           </picture>
         </a>
         <button class="navigation__logo-toggle navigation__logo-toggle--close" type="button">
