--- a/source/index.html
+++ b/source/index.html
@@ -122,9 +122,9 @@
           </table>
         </div>
         <picture class="featured__picture">
-          <source srcset="img/triple-set-desktop@1x.jpg" media="(min-width: 1150px)">
-          <source srcset="img/triple-set-tablet@1x.jpg" media="(min-width: 768px)">
-          <img class="featured__image" src="img/triple-set-mobile@1x.jpg" alt="Вязаные корзинки">
+          <source srcset="img/triple-set-desktop@1x.jpg 1x, img/triple-set-desktop@2x.jpg 2x" media="(min-width: 1150px)">
+          <source srcset="img/triple-set-tablet@1x.jpg 1x, img/triple-set-mobile@2x.jpg 2x" media="(min-width: 768px)">
+          <img class="featured__image" src="img/triple-set-mobile@1x.jpg" srcset="img/triple-set-mobile@2x.jpg 2x" alt="Вязаные корзинки">
         </picture>
         <div class="featured__buy">
           <p class="featured__price">Цена: 990 руб.</p>
@@ -234,9 +234,9 @@
       </div>
       <div class="contacts__map">
         <picture class="contacts__map-picture">
-          <source srcset="img/map-desktop@1x.jpg" media="(min-width: 1150px)">
-          <source srcset="img/map-tablet@1x.jpg" media="(min-width: 768px)">
-          <img class="contacts__map-image" src="img/map-mobile@1x.jpg" alt="Наш адрес: г. Санкт-Петербург, ул. Большая Конюшенная, д. 19/8, офис 101">
+          <source srcset="img/map-desktop@1x.jpg 1x, img/map-desktop@2x.jpg 2x" media="(min-width: 1150px)">
+          <source srcset="img/map-tablet@1x.jpg 1x, img/map-tablet@2x.jpg 2x" media="(min-width: 768px)">
+          <img class="contacts__map-image" src="img/map-mobile@1x.jpg" srcset="img/map-mobile@2x.jpg 2x" alt="Наш адрес: г. Санкт-Петербург, ул. Большая Конюшенная, д. 19/8, офис 101">
         </picture>
       </div>
       <a class="button contacts__write-us" href="#">Напишите нам</a>
