--- a/source/catalog.html
+++ b/source/catalog.html
@@ -78,9 +78,9 @@
         <li class="product catalog__item">
           <a class="product__link" href="#">
             <picture class="product__picture">
-              <source srcset="img/photo-hare-desktop@1x.jpg" media="(min-width: 1150px)">
-              <source srcset="img/photo-hare-tablet@1x.jpg" media="(min-width: 768px)">
-              <img class="product__image" src="img/photo-hare-mobile@1x.jpg" alt="Зайчик-попрыгайчик">
+              <source srcset="img/photo-hare-desktop@1x.jpg 1x, img/photo-hare-desktop@2x.jpg 2x" media="(min-width: 1150px)">
+              <source srcset="img/photo-hare-tablet@1x.jpg 1x, img/photo-hare-tablet@2x.jpg 2x" media="(min-width: 768px)">
+              <img class="product__image" src="img/photo-hare-mobile@1x.jpg" srcset="img/photo-hare-mobile@2x.jpg 2x" alt="Зайчик-попрыгайчик">
             </picture>
           </a>
           <div class="product__wrapper">
@@ -104,9 +104,9 @@
         <li class="product catalog__item">
           <a class="product__link" href="#">
             <picture class="product__picture">
-              <source srcset="img/photo-bowl-desktop@1x.jpg" media="(min-width: 1150px)">
-              <source srcset="img/photo-bowl-tablet@1x.jpg" media="(min-width: 768px)">
-              <img class="product__image" src="img/photo-bowl-mobile@1x.jpg" alt="Корзинка для белья">
+              <source srcset="img/photo-bowl-desktop@1x.jpg 1x, img/photo-bowl-desktop@2x.jpg 2x" media="(min-width: 1150px)">
+              <source srcset="img/photo-bowl-tablet@1x.jpg 1x, img/photo-bowl-tablet@2x.jpg 2x" media="(min-width: 768px)">
+              <img class="product__image" src="img/photo-bowl-mobile@1x.jpg" srcset="img/photo-bowl-mobile@2x.jpg 2x" alt="Корзинка для белья">
             </picture>
           </a>
           <div class="product__wrapper">
@@ -130,9 +130,9 @@
         <li class="product catalog__item">
           <a class="product__link" href="#">
             <picture class="product__picture">
-              <source srcset="img/photo-toys-desktop@1x.jpg" media="(min-width: 1150px)">
-              <source srcset="img/photo-toys-tablet@1x.jpg" media="(min-width: 768px)">
-              <img class="product__image" src="img/photo-toys-mobile@1x.jpg" alt="Большая корзинка для игрушек">
+              <source srcset="img/photo-toys-desktop@1x.jpg 1x, img/photo-toys-desktop@2x.jpg 2x" media="(min-width: 1150px)">
+              <source srcset="img/photo-toys-tablet@1x.jpg 1x, img/photo-toys-tablet@2x.jpg 2x" media="(min-width: 768px)">
+              <img class="product__image" src="img/photo-toys-mobile@1x.jpg" srcset="img/photo-toys-mobile@2x.jpg 2x" alt="Большая корзинка для игрушек">
             </picture>
           </a>
           <div class="product__wrapper">
@@ -166,9 +166,9 @@
       </div>
       <div class="video__player">
         <picture class="video__picture">
-          <source srcset="img/video-desktop@1x.jpg" media="(min-width: 1150px)">
-          <source srcset="img/video-tablet@1x.jpg" media="(min-width: 768px)">
-          <img class="video__screenshot" src="img/video-mobile@1x.jpg" alt="Видео процесса производства">
+          <source srcset="img/video-desktop@1x.jpg 1x, img/video-desktop@2x.jpg 2x" media="(min-width: 1150px)">
+          <source srcset="img/video-tablet@1x.jpg 1x, img/video-tablet@2x.jpg 2x" media="(min-width: 768px)">
+          <img class="video__screenshot" src="img/video-mobile@1x.jpg" srcset="img/video-mobile@2x.jpg 2x" alt="Видео процесса производства">
         </picture>
         <button class="video__play-button" type="button">
           <span class="visually-hidden">Запустить видео</span>
