Добавил классы в навигацию для работы меню на мобильных

--- a/source/index.html
+++ b/source/index.html
@@ -11,7 +11,7 @@
 <body class="page">
 
   <header class="header">
-    <nav class="navigation">
+    <nav class="navigation navigation--nojs">
       <div class="navigation__logo">
         <a class="navigation__logo-link">
           <picture class="navigation__logo-picture">
@@ -20,7 +20,7 @@
             <img class="navigation__logo-image" src="img/logo-mobile.svg" alt="Интернет-магазин Мишка" width="86" height="35" >
           </picture>
         </a>
-        <button class="navigation__logo-toggle navigation__logo-toggle--close" type="button">
+        <button class="navigation__logo-toggle navigation__logo-toggle--open" type="button">
           <span class="visually-hidden">Открыть меню</span>
         </button>
       </div>
