Добавил в разметку класс js-basket для обработки вызова модального окна корзины

--- a/source/index.html
+++ b/source/index.html
@@ -128,7 +128,7 @@
         </picture>
         <div class="featured__buy">
           <p class="featured__price">Цена: 990 руб.</p>
-          <a class="button featured__order" href="#">Заказать</a>
+          <a class="button featured__order js-basket" href="#">Заказать</a>
         </div>
       </div>
     </section>
