--- a/source/form.html
+++ b/source/form.html
@@ -78,7 +78,7 @@
       <form class="form" action="https://echo.htmlacademy.ru" method="GET">
         <fieldset class="form__fieldset form__fieldset--type">
           <div class="form__fieldset-wrapper">
-            <legend class="form__legend form__legend--type">Тип</legend>
+            <div class="form__legend form__legend--type">Тип</div>
             <ul class="form__inputs form__inputs--type">
               <li class="form__inputs-item">
                 <input class="visually-hidden form__input-radio" type="radio" name="type" id="accessory" value="accessory" checked>
@@ -95,7 +95,7 @@
         </fieldset>
         <fieldset class="form__fieldset form__fieldset--color">
           <div class="form__fieldset-wrapper">
-            <legend class="form__legend form__legend--color">Цвет</legend>
+            <div class="form__legend form__legend--color">Цвет</div>
             <ul class="form__inputs form__inputs--color">
               <li class="form__inputs-item">
                 <input class="visually-hidden form__input-checkbox" type="checkbox" name="color" id="color-white" value="white" checked>
@@ -126,7 +126,7 @@
         </fieldset>
         <fieldset class="form__fieldset form__fieldset--full-name">
           <div class="form__fieldset-wrapper">
-            <legend class="form__legend form__legend--full-name">Фио</legend>
+            <div class="form__legend form__legend--full-name">Фио</div>
             <div class="form__field-wrapper">
               <p class="form__field">
                 <label class="form__label form__label--name" for="name-field">Имя:</label>
@@ -145,7 +145,7 @@
         </fieldset>
         <fieldset class="form__fieldset form__fieldset--tel">
           <div class="form__fieldset-wrapper">
-            <legend class="form__legend form__legend--tel">Тел</legend>
+            <div class="form__legend form__legend--tel">Тел</div>
             <label class="visually-hidden" for="phone-field">Ваш телефон:</label>
             <div class="form__input-wrapper">
               <input class="form__input form__input--tel" type="tel" name="phone" id="phone-field" placeholder="+7 XXX XXX XX XX*" required>
@@ -166,7 +166,7 @@
         </fieldset>
         <fieldset class="form__fieldset form__fieldset--email">
           <div class="form__fieldset-wrapper">
-            <legend class="form__legend form__legend--email">E-mail</legend>
+            <div class="form__legend form__legend--email">E-mail</div>
             <label class="visually-hidden" for="email-field">Ваш e-mail:</label>
             <div class="form__input-wrapper">
               <input class="form__input" type="email" name="email" id="email-field" placeholder="Ваш Email*" required>
@@ -178,7 +178,7 @@
         </fieldset>
         <fieldset class="form__fieldset form__fieldset--dop form__fieldset--last">
           <div class="form__fieldset-wrapper">
-            <legend class="form__legend form__legend--dop">Доп</legend>
+            <div class="form__legend form__legend--dop">Доп</div>
             <label class="visually-hidden" for="textarea-field">Опишите ваши пожелания</label>
             <textarea class="form__input form__input--textarea" name="description" id="textarea-field" placeholder="Опишите все ваши пожелания к заказу"></textarea>
           </div>
