Добавил в index.html и catalog.html ссылки для соответствия с ТЗ для graceful degradation

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -130,7 +130,7 @@
       <h2 class="visually-hidden">Наши изделия</h2>
       <ul class="catalog__list">
         <li class="product catalog__item">
-          <a class="product__link" href="#">
+          <a class="product__link" href="product.html">
             <picture class="product__picture">
               <source srcset="img/photo-hare-desktop@1x.webp 1x, img/photo-hare-desktop@2x.webp 2x" media="(min-width: 1150px)">
               <source srcset="img/photo-hare-tablet@1x.webp 1x, img/photo-hare-tablet@2x.webp 2x" media="(min-width: 768px)">
@@ -144,7 +144,7 @@
           <div class="product__wrapper">
             <div class="product__info">
               <h3 class="product__title">
-                <a class="product__link" href="#">Зайчик-попрыгайчик</a>
+                <a class="product__link" href="product.html">Зайчик-попрыгайчик</a>
               </h3>
               <p class="product__description">Рост 30 см, вес 200 г</p>
             </div>
@@ -160,7 +160,7 @@
           </div>
         </li>
         <li class="product catalog__item">
-          <a class="product__link" href="#">
+          <a class="product__link" href="product.html">
             <picture class="product__picture">
               <source srcset="img/photo-bowl-desktop@1x.webp 1x, img/photo-bowl-desktop@2x.webp 2x" media="(min-width: 1150px)">
               <source srcset="img/photo-bowl-tablet@1x.webp 1x, img/photo-bowl-tablet@2x.webp 2x" media="(min-width: 768px)">
@@ -174,7 +174,7 @@
           <div class="product__wrapper">
             <div class="product__info">
               <h3 class="product__title">
-                <a class="product__link" href="#">Корзинка для белья</a>
+                <a class="product__link" href="product.html">Корзинка для белья</a>
               </h3>
               <p class="product__description">Диаметр 15 см, высота 10 см</p>
             </div>
@@ -190,7 +190,7 @@
           </div>
         </li>
         <li class="product catalog__item">
-          <a class="product__link" href="#">
+          <a class="product__link" href="product.html">
             <picture class="product__picture">
               <source srcset="img/photo-toys-desktop@1x.webp 1x, img/photo-toys-desktop@2x.webp 2x" media="(min-width: 1150px)">
               <source srcset="img/photo-toys-tablet@1x.webp 1x, img/photo-toys-tablet@2x.webp 2x" media="(min-width: 768px)">
@@ -204,7 +204,7 @@
           <div class="product__wrapper">
             <div class="product__info">
               <h3 class="product__title">
-                <a class="product__link" href="#">Большая корзинка для игрушек</a>
+                <a class="product__link" href="product.html">Большая корзинка для игрушек</a>
               </h3>
               <p class="product__description">Диаметр 30 см, высота 30 см</p>
             </div>
