--- a/source/index.html
+++ b/source/index.html
@@ -279,7 +279,7 @@
             <span class="visually-hidden">Вперед</span>
           </button>
         </p>
-        <a class="button reviews__write" href="#">Написать</a>
+        <a class="button reviews__write" href="white-review.html">Написать</a>
       </div>
     </section>
     <section class="contacts">
@@ -312,7 +312,7 @@
           <span class="visually-hidden">Яндекс карта</span>
         </div>
       </div>
-      <a class="button contacts__write-us" href="#">Напишите нам</a>
+      <a class="button contacts__write-us" href="feedback.html">Напишите нам</a>
     </section>
   </main>
 
