Изменил разметку в form.html, заменил div на h2 для элемента form__legend

--- a/source/form.html
+++ b/source/form.html
@@ -125,7 +125,7 @@
       <form class="form" action="https://echo.htmlacademy.ru" method="GET">
         <fieldset class="form__fieldset form__fieldset--type">
           <div class="form__fieldset-wrapper">
-            <div class="form__legend form__legend--type">Тип</div>
+            <h2 class="form__legend form__legend--type">Тип</h2>
             <ul class="form__inputs form__inputs--type">
               <li class="form__inputs-item">
                 <input class="visually-hidden form__input-radio" type="radio" name="type" id="accessory" value="accessory" checked>
@@ -142,7 +142,7 @@
         </fieldset>
         <fieldset class="form__fieldset form__fieldset--color">
           <div class="form__fieldset-wrapper">
-            <div class="form__legend form__legend--color">Цвет</div>
+            <h2 class="form__legend form__legend--color">Цвет</h2>
             <ul class="form__inputs form__inputs--color">
               <li class="form__inputs-item">
                 <input class="visually-hidden form__input-checkbox" type="checkbox" name="color" id="color-white" value="white" checked>
@@ -173,7 +173,7 @@
         </fieldset>
         <fieldset class="form__fieldset form__fieldset--full-name">
           <div class="form__fieldset-wrapper">
-            <div class="form__legend form__legend--full-name">Фио</div>
+            <h2 class="form__legend form__legend--full-name">Фио</h2>
             <div class="form__field-wrapper">
               <p class="form__field">
                 <label class="form__label form__label--name" for="name-field">Имя:</label>
@@ -192,7 +192,7 @@
         </fieldset>
         <fieldset class="form__fieldset form__fieldset--tel">
           <div class="form__fieldset-wrapper">
-            <div class="form__legend form__legend--tel">Тел</div>
+            <h2 class="form__legend form__legend--tel">Тел</h2>
             <label class="visually-hidden" for="phone-field">Ваш телефон:</label>
             <div class="form__input-wrapper">
               <input class="form__input form__input--tel" type="tel" name="phone" id="phone-field" placeholder="+7 XXX XXX XX XX*" required>
@@ -204,7 +204,7 @@
         </fieldset>
         <fieldset class="form__fieldset form__fieldset--email">
           <div class="form__fieldset-wrapper">
-            <div class="form__legend form__legend--email">E-mail</div>
+            <h2 class="form__legend form__legend--email">E-mail</h2>
             <label class="visually-hidden" for="email-field">Ваш e-mail:</label>
             <div class="form__input-wrapper">
               <input class="form__input" type="email" name="email" id="email-field" placeholder="Ваш Email*" required>
@@ -216,7 +216,7 @@
         </fieldset>
         <fieldset class="form__fieldset form__fieldset--dop form__fieldset--last">
           <div class="form__fieldset-wrapper">
-            <div class="form__legend form__legend--dop">Доп</div>
+            <h2 class="form__legend form__legend--dop">Доп</h2>
             <label class="visually-hidden" for="textarea-field">Опишите ваши пожелания</label>
             <textarea class="form__input form__input--textarea" name="description" id="textarea-field" placeholder="Опишите все ваши пожелания к заказу"></textarea>
           </div>
