--- a/source/catalog.html
+++ b/source/catalog.html
@@ -79,12 +79,12 @@
         </button>
       </div>
       <div class="navigation__wrapper-top">
-        <ul class="navigation__list">
-          <li class="navigation__item navigation__item--top-first">
+        <ul class="navigation__list navigation__list--top">
+          <li class="navigation__item navigation__item--top">
             <a class="navigation__link navigation__link--top" href="catalog.html">Каталог товаров</a>
           </li>
-          <li class="navigation__item navigation__item--top-second">
-            <a class="navigation__link navigation__link--top navigation__link--top-second" href="form.html">Вязание на заказ</a>
+          <li class="navigation__item navigation__item--top">
+            <a class="navigation__link navigation__link--top" href="form.html">Вязание на заказ</a>
           </li>
         </ul>
       </div>
@@ -109,11 +109,11 @@
         </ul>
       </div>
       <div class="navigation__wrapper-promo">
-        <ul class="navigation__list">
-          <li class="navigation__item">
+        <ul class="navigation__list navigation__list--promo">
+          <li class="navigation__item navigation__item--promo">
             <a class="navigation__link navigation__link--promo" href="#">Новые поступления</a>
           </li>
-          <li class="navigation__item">
+          <li class="navigation__item navigation__item--promo">
             <a class="navigation__link navigation__link--promo" href="#">Распродажа</a>
           </li>
         </ul>
