--- a/source/index.html
+++ b/source/index.html
@@ -202,9 +202,9 @@
           </table>
         </div>
         <picture class="featured__picture">
-          <source srcset="img/triple-set-desktop@1x.webp 1x, img/triple-set-desktop@2x.webp 2x" media="(min-width: 1150px)">
-          <source srcset="img/triple-set-tablet@1x.webp 1x, img/triple-set-mobile@2x.webp 2x" media="(min-width: 768px)">
-          <source srcset="img/triple-set-mobile@1x.webp 1x, img/triple-set-mobile@2x.webp 2x">
+          <source type="image/webp" srcset="img/triple-set-desktop@1x.webp 1x, img/triple-set-desktop@2x.webp 2x" media="(min-width: 1150px)">
+          <source type="image/webp" srcset="img/triple-set-tablet@1x.webp 1x, img/triple-set-mobile@2x.webp 2x" media="(min-width: 768px)">
+          <source type="image/webp" srcset="img/triple-set-mobile@1x.webp 1x, img/triple-set-mobile@2x.webp 2x">
 
           <source srcset="img/triple-set-desktop@1x.jpg 1x, img/triple-set-desktop@2x.jpg 2x" media="(min-width: 1150px)">
           <source srcset="img/triple-set-tablet@1x.jpg 1x, img/triple-set-tablet@2x.jpg 2x" media="(min-width: 768px)">
@@ -300,9 +300,9 @@
       </div>
       <div class="contacts__map">
         <picture class="contacts__map-picture">
-          <source srcset="img/map-desktop@1x.webp 1x, img/map-desktop@2x.webp 2x" media="(min-width: 1150px)">
-          <source srcset="img/map-tablet@1x.webp 1x, img/map-tablet@2x.webp 2x" media="(min-width: 768px)">
-          <source srcset="img/map-mobile@1x.webp 1x, img/map-mobile@2x.webp 2x">
+          <source type="image/webp" srcset="img/map-desktop@1x.webp 1x, img/map-desktop@2x.webp 2x" media="(min-width: 1150px)">
+          <source type="image/webp" srcset="img/map-tablet@1x.webp 1x, img/map-tablet@2x.webp 2x" media="(min-width: 768px)">
+          <source type="image/webp" srcset="img/map-mobile@1x.webp 1x, img/map-mobile@2x.webp 2x">
 
           <source srcset="img/map-desktop@1x.jpg 1x, img/map-desktop@2x.jpg 2x" media="(min-width: 1150px)">
           <source srcset="img/map-tablet@1x.jpg 1x, img/map-tablet@2x.jpg 2x" media="(min-width: 768px)">
