Прописал fallback ссылку для некоторых кнопок Сделать заказ

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -247,7 +247,7 @@
       </div>
       <div class="video__description">
         <p class="video__text">По просьбам наших любимых фолловеров мы сняли для вас подробное видео о том, как появляются наши товары.</p>
-        <a class="button video__order js-basket" href="#">Сделать заказ</a>
+        <a class="button video__order js-basket" href="size.html">Сделать заказ</a>
       </div>
     </section>
   </main>
