--- a/source/index.html
+++ b/source/index.html
@@ -212,7 +212,7 @@
         </picture>
         <div class="featured__buy">
           <p class="featured__price">Цена: 990 руб.</p>
-          <a class="button featured__order js-basket" href="#">Заказать</a>
+          <a class="button featured__order js-basket" href="size.html">Заказать</a>
         </div>
       </div>
     </section>
