--- a/source/catalog.html
+++ b/source/catalog.html
@@ -5,6 +5,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>HTML Academy: Мишка | Каталог товаров</title>
+  <link rel="preload" crossorigin type="font/woff2" href="fonts/opensans.woff2" as="font">
+  <link rel="preload" crossorigin type="font/woff2" href="fonts/opensansbold.woff2" as="font">
   <link rel="stylesheet" href="css/style.min.css">
 </head>
 
