Подключил к html версию файла script.min.js

--- a/source/index.html
+++ b/source/index.html
@@ -293,7 +293,7 @@
 
   <script src="js/picturefill.min.js"></script>
   <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU"></script>
-  <script src="js/script.js"></script>
+  <script src="js/script.min.js"></script>
 </body>
 
 </html>
