--- a/source/catalog.html
+++ b/source/catalog.html
@@ -259,8 +259,8 @@
     <a class="button modal-basket__add" href="#">Добавить</a>
   </section>
 
-  <script src="js/script.js"></script>
   <script src="js/picturefill.min.js"></script>
+  <script src="js/script.min.js"></script>
 </body>
 
 </html>
