--- a/source/form.html
+++ b/source/form.html
@@ -231,8 +231,8 @@
     </div>
   </footer>
 
-  <script src="js/script.js"></script>
   <script src="js/picturefill.min.js"></script>
+  <script src="js/script.min.js"></script>
 </body>
 
 </html>
