Добавил url для ссылок в блоке hero

--- a/source/index.html
+++ b/source/index.html
@@ -77,7 +77,7 @@
         <h1 class="hero__title">Милые штуки ручной<br> работы для дома</h1>
         <ul class="hero__list">
           <li class="hero__item">
-            <a class="hero__link hero__link--interior" href="#">
+            <a class="hero__link hero__link--interior" href="catalog.html?interior">
               <span class="hero__link-text">Предметы интерьера</span>
               <svg class="hero__icon hero__icon--interior" width="40" height="62">
                 <use xlink:href="#icon-interior"></use>
@@ -85,7 +85,7 @@
             </a>
           </li>
           <li class="hero__item">
-            <a class="hero__link hero__link--toy" href="#">
+            <a class="hero__link hero__link--toy" href="catalog.html?toy">
               <span class="hero__link-text">Детские игрушки</span>
               <svg class="hero__icon hero__icon--toy" width="60" height="60">
                 <use xlink:href="#icon-toy"></use>
