Убрал лишний <br> в блоке about в index.html

--- a/source/index.html
+++ b/source/index.html
@@ -171,7 +171,7 @@
               <svg class="about__icon about__icon--rocket" width="55" height="23">
                 <use xlink:href="#icon-feature-rocket"></use>
               </svg>
-              Поддержка отечественного<br> производителя
+              Поддержка отечественного производителя
             </li>
             <li class="about__item">
               <svg class="about__icon about__icon--gift" width="33" height="32">
