--- a/source/index.html
+++ b/source/index.html
@@ -186,7 +186,7 @@
     <section class="reviews">
       <div class="reviews__content">
         <h2 class="reviews__title">Отзывы</h2>
-        <p class="reviews__text">Я молодая мама, но всё равно фотографии не набирали и близко такого количества лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке, и мои фотографии сразу стали более стильными, а также набирают больше лайков!</p>
+        <p class="reviews__text">Я молодая мама, но всё равно фотографии не набирали и близко такого количества лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке,<br> и мои фотографии сразу стали более стильными, а также набирают больше лайков!</p>
         <div class="reviews__author">
           <p class="reviews__author-name">Анастасия Красильникова</p>
           <a class="reviews__author-link" href="#">@misssssiskras</a>
