Убрал <br> и добавил &nbsp; в элементе hero__title в index.html

--- a/source/index.html
+++ b/source/index.html
@@ -74,7 +74,7 @@
     </nav>
     <section class="hero hero--main-page">
       <div class="hero__wrapper">
-        <h1 class="hero__title">Милые штуки ручной<br> работы для дома</h1>
+        <h1 class="hero__title">Милые штуки ручной работы&nbsp;для дома</h1>
         <ul class="hero__list">
           <li class="hero__item">
             <a class="hero__link hero__link--interior" href="catalog.html?interior">
