Убрал href из catalog.html и form.html для отмены перелинковки при нахождении на этих страницах

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -33,7 +33,7 @@
       <div class="navigation__wrapper-top">
         <ul class="navigation__list navigation__list--top">
           <li class="navigation__item navigation__item--top">
-            <a class="navigation__link navigation__link--top" href="catalog.html">Каталог товаров</a>
+            <a class="navigation__link navigation__link--top">Каталог товаров</a>
           </li>
           <li class="navigation__item navigation__item--top">
             <a class="navigation__link navigation__link--top" href="form.html">Вязание на заказ</a>
