--- a/source/form.html
+++ b/source/form.html
@@ -36,7 +36,7 @@
             <a class="navigation__link navigation__link--top" href="catalog.html">Каталог товаров</a>
           </li>
           <li class="navigation__item navigation__item--top">
-            <a class="navigation__link navigation__link--top" href="form.html">Вязание на заказ</a>
+            <a class="navigation__link navigation__link--top">Вязание на заказ</a>
           </li>
         </ul>
       </div>
