--- a/source/form.html
+++ b/source/form.html
@@ -163,8 +163,7 @@
         </fieldset>
         <fieldset class="form__fieldset form__fieldset--email">
           <div class="form__fieldset-wrapper">
-            <h3 class="form__legend form__legend--email">E-mail</h3>
-            <label class="visually-hidden" for="email-field">Ваш e-mail:</label>
+            <label class="form__legend form__legend--email">E-mail</label>
             <div class="form__input-wrapper">
               <input class="form__input" type="email" name="email" id="email-field" placeholder="Ваш Email*" required>
               <svg class="form__icon form__icon--email" width="32" height="32">
