Изменил метод отправки формы на POST

--- a/source/form.html
+++ b/source/form.html
@@ -81,7 +81,7 @@
     <section class="order-form">
       <h2 class="visually-hidden">Форма заказа</h2>
       <p class="order-form__text">Мы будем рады воплотить в жизнь ваши пожелания! Заполните простую форму заказа и мы свяжемся с вами, чтобы уточнить детали.</p>
-      <form class="form" action="https://echo.htmlacademy.ru" method="GET">
+      <form class="form" action="https://echo.htmlacademy.ru" method="POST">
         <fieldset class="form__fieldset form__fieldset--type">
           <div class="form__fieldset-wrapper">
             <h3 class="form__legend form__legend--type">Тип</h3>
