Изменил элемент product-order c кнопки на ссылку

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -102,12 +102,12 @@
             </div>
             <div class="product__buy">
               <p class="product__price">1 200 руб.</p>
-              <button class="product__order js-basket" type="button">
+              <a class="product__order js-basket" href="size.html">
                 <span class="visually-hidden">Положить в корзину</span>
                 <svg class="product__order-icon" width="21" height="18">
                   <use xlink:href="#icon-cart"></use>
                 </svg>
-              </button>
+              </a>
             </div>
           </div>
         </li>
@@ -132,12 +132,12 @@
             </div>
             <div class="product__buy">
               <p class="product__price">690 руб.</p>
-              <button class="product__order js-basket" type="button">
+              <a class="product__order js-basket" href="size.html">
                 <span class="visually-hidden">Положить в корзину</span>
                 <svg class="product__order-icon" width="21" height="18">
                   <use xlink:href="#icon-cart"></use>
                 </svg>
-              </button>
+              </a>
             </div>
           </div>
         </li>
@@ -162,12 +162,12 @@
             </div>
             <div class="product__buy">
               <p class="product__price">1 500 руб.</p>
-              <button class="product__order js-basket" type="button">
+              <a class="product__order js-basket" href="size.html">
                 <span class="visually-hidden">Положить в корзину</span>
                 <svg class="product__order-icon" width="21" height="18">
                   <use xlink:href="#icon-cart"></use>
                 </svg>
-              </button>
+              </a>
             </div>
           </div>
         </li>
