Изменил url на кнопках заказа

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -102,7 +102,7 @@
             </div>
             <div class="product__buy">
               <p class="product__price">1 200 руб.</p>
-              <a class="product__order js-basket" href="size.html">
+              <a class="product__order js-basket" href="?open-sizes">
                 <span class="visually-hidden">Положить в корзину</span>
                 <svg class="product__order-icon" width="21" height="18">
                   <use xlink:href="#icon-cart"></use>
@@ -132,7 +132,7 @@
             </div>
             <div class="product__buy">
               <p class="product__price">690 руб.</p>
-              <a class="product__order js-basket" href="size.html">
+              <a class="product__order js-basket" href="?open-sizes">
                 <span class="visually-hidden">Положить в корзину</span>
                 <svg class="product__order-icon" width="21" height="18">
                   <use xlink:href="#icon-cart"></use>
@@ -162,7 +162,7 @@
             </div>
             <div class="product__buy">
               <p class="product__price">1 500 руб.</p>
-              <a class="product__order js-basket" href="size.html">
+              <a class="product__order js-basket" href="?open-sizes">
                 <span class="visually-hidden">Положить в корзину</span>
                 <svg class="product__order-icon" width="21" height="18">
                   <use xlink:href="#icon-cart"></use>
@@ -199,7 +199,7 @@
       </div>
       <div class="video__description">
         <p class="video__text">По просьбам наших любимых фолловеров мы сняли для вас подробное видео о том, как появляются наши товары.</p>
-        <a class="button video__order js-basket" href="size.html">Сделать заказ</a>
+        <a class="button video__order js-basket" href="?open-sizes">Сделать заказ</a>
       </div>
     </section>
   </main>
