--- a/source/index.html
+++ b/source/index.html
@@ -132,7 +132,7 @@
         </picture>
         <div class="featured__buy">
           <p class="featured__price">Цена: 990 руб.</p>
-          <a class="button featured__order js-basket" href="size.html">Заказать</a>
+          <a class="button featured__order js-basket" href="?open-sizes">Заказать</a>
         </div>
       </div>
     </section>
@@ -199,7 +199,7 @@
             <span class="visually-hidden">Вперед</span>
           </button>
         </p>
-        <a class="button reviews__write" href="white-review.html">Написать</a>
+        <a class="button reviews__write" href="write-review.html">Написать</a>
       </div>
     </section>
     <section class="contacts">
